<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/iconid"
            android:src="@drawable/ic_person_outline_black_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/label_id_mahasiswa"
            android:id="@+id/tv_id_mahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/label_nim"
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/label_username"
            android:id="@+id/tv_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/label_password"
            android:id="@+id/tv_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="@string/label_nama"
            android:id="@+id/tv_nama"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>