<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/rec"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:padding="6dp"
            android:text="@string/str_results"
            android:textAlignment="center"
            android:textColor="#673ab7"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAnsweredInfo"
            android:layout_below="@+id/tvHeading"
            android:layout_marginLeft="20dp"
            android:text="@string/str_results"
            android:padding="6dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#d50000"/>

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_below="@+id/tvAnsweredInfo"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="0.0"/>

        <TextView
            android:id="@+id/textResult"
            android:layout_below="@+id/ratingBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.08"
            android:text="Large Text"
            android:padding="6dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_gotohome"
            android:textColor="#000000"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:id="@+id/btnDone"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_viewans"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnViewAnswer"
            android:layout_alignBottom="@+id/btnDone"
            android:layout_toRightOf="@+id/btnDone"
            android:layout_toEndOf="@+id/btnDone"
            android:textColor="#000000"
            />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>